--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cspell-monorepo",
-  "version": "5.0.1-alpha.0",
+  "version": "1.0.0",
   "description": "cspell monorepo.",
   "main": "bin.js",
   "private": true,
