--- a/package.json
+++ b/package.json
@@ -42,32 +42,33 @@
   "devDependencies": {
     "@types/comment-json": "^1.1.1",
     "@types/configstore": "^4.0.0",
-    "@types/fs-extra": "^8.1.0",
+    "@types/fs-extra": "^8.0.1",
     "@types/glob": "^7.1.1",
-    "@types/jest": "^25.2.1",
+    "@types/jest": "^24.0.25",
     "@types/lorem-ipsum": "^1.0.2",
     "@types/micromatch": "^3.1.1",
     "@types/minimatch": "^3.0.3",
-    "@types/node": "^10.17.19",
+    "@types/node": "^10.17.11",
     "@types/xregexp": "^3.0.30",
-    "ajv-cli": "^3.1.0",
+    "ajv-cli": "^3.0.0",
     "codecov": "^3.6.4",
-    "coveralls": "^3.0.11",
-    "cspell-dict-en_us": "^1.2.25",
+    "coveralls": "^3.0.9",
+    "cspell-dict-en_us": "^1.2.24",
     "cspell-dict-es-es": "^1.0.18",
     "cspell-dict-nl-nl": "^1.0.23",
-    "globcat": "^1.2.2",
-    "jest": "^25.3.0",
+    "fs-extra": "^8.1.0",
+    "globcat": "^1.2.0",
+    "jest": "^24.9.0",
     "lerna": "^3.20.2",
     "lorem-ipsum": "^1.0.6",
-    "rimraf": "^3.0.2",
+    "rimraf": "^3.0.0",
     "source-map-support": "^0.5.16",
-    "ts-jest": "^25.3.1",
-    "ts-json-schema-generator": "^0.65.0",
-    "ts-loader": "^6.2.2",
-    "tslint": "^6.1.1",
-    "typescript": "^3.8.3",
-    "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11"
+    "ts-jest": "^24.2.0",
+    "ts-json-schema-generator": "^0.58.1",
+    "ts-loader": "^6.2.1",
+    "tslint": "^5.20.1",
+    "typescript": "^3.7.4",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10"
   }
 }
