--- a/packages/cspell-lib/package.json
+++ b/packages/cspell-lib/package.json
@@ -83,6 +83,7 @@
     "cspell-util-bundle": "^4.0.10",
     "fs-extra": "^8.1.0",
     "gensequence": "^3.1.1",
+    "minimatch": "^3.0.4",
     "vscode-uri": "^2.1.1"
   },
   "engines": {
