--- a/packages/cspell-lib/package.json
+++ b/packages/cspell-lib/package.json
@@ -54,30 +54,33 @@
   "dependencies": {
     "comment-json": "^1.1.3",
     "configstore": "^5.0.1",
+    "cspell-dict-aws": "^1.0.5",
     "cspell-dict-bash": "^1.0.3",
-    "cspell-dict-companies": "^1.0.21",
+    "cspell-dict-companies": "^1.0.22",
     "cspell-dict-cpp": "^1.1.26",
+    "cspell-dict-cryptocurrencies": "^1.0.2",
     "cspell-dict-django": "^1.0.15",
     "cspell-dict-dotnet": "^1.0.14",
     "cspell-dict-elixir": "^1.0.13",
     "cspell-dict-en-gb": "^1.1.16",
-    "cspell-dict-en_us": "^1.2.25",
+    "cspell-dict-en_us": "^1.2.26",
     "cspell-dict-fonts": "^1.0.5",
-    "cspell-dict-fullstack": "^1.0.22",
+    "cspell-dict-fullstack": "^1.0.23",
     "cspell-dict-golang": "^1.1.14",
     "cspell-dict-haskell": "^1.0.4",
     "cspell-dict-html-symbol-entities": "^1.0.13",
     "cspell-dict-java": "^1.0.12",
     "cspell-dict-latex": "^1.0.13",
     "cspell-dict-lorem-ipsum": "^1.0.10",
+    "cspell-dict-lua": "^1.0.8",
     "cspell-dict-php": "^1.0.13",
     "cspell-dict-powershell": "^1.0.6",
     "cspell-dict-python": "^1.0.20",
     "cspell-dict-ruby": "^1.0.3",
     "cspell-dict-rust": "^1.0.12",
     "cspell-dict-scala": "^1.0.11",
-    "cspell-dict-software-terms": "^1.0.7",
-    "cspell-dict-typescript": "^1.0.4",
+    "cspell-dict-software-terms": "^1.0.10",
+    "cspell-dict-typescript": "^1.0.5",
     "cspell-io": "^4.0.21",
     "cspell-trie-lib": "^4.1.9",
     "cspell-util-bundle": "^4.0.11",
