--- a/packages/cspell-trie-lib/package.json
+++ b/packages/cspell-trie-lib/package.json
@@ -33,6 +33,7 @@
   },
   "homepage": "https://github.com/streetsidesoftware/cspell#readme",
   "dependencies": {
+    "fs-extra": "^9.0.0",
     "gensequence": "^3.1.1"
   },
   "nyc": {
