--- a/packages/cspell-lib/package.json
+++ b/packages/cspell-lib/package.json
@@ -19,7 +19,7 @@
     "build-schema": "ts-json-schema-generator --no-top-ref --path src/Settings/CSpellSettingsDef.ts --type CSpellSettings --validationKeywords markdownDescription  --validationKeywords scope --validationKeywords deprecationMessage -o  ../../cspell.schema.json",
     "clean-build": "npm run clean && npm run build && npm run build-dictionaries",
     "build-dictionaries": "npm run build_dictionaries-word-lists",
-    "build_dictionaries-word-lists": "node ../../node_modules/cspell-tools/bin.js compile \"./dictionaries/!(words)*.txt\" -o ./dist/dictionaries/",
+    "build_dictionaries-word-lists": "node ../cspell-tools/bin.js compile \"./dictionaries/!(words)*.txt\" -o ./dist/dictionaries/",
     "compile": "tsc -p .",
     "watch": "tsc --watch -p .",
     "tsc": "tsc -p .",
@@ -52,7 +52,7 @@
   },
   "homepage": "https://github.com/streetsidesoftware/cspell#readme",
   "dependencies": {
-    "comment-json": "^1.1.3",
+    "comment-json": "^3.0.2",
     "configstore": "^5.0.1",
     "cspell-dict-aws": "^1.0.5",
     "cspell-dict-bash": "^1.0.3",
@@ -84,7 +84,7 @@
     "cspell-io": "^4.0.21",
     "cspell-trie-lib": "^4.1.9",
     "cspell-util-bundle": "^4.0.11",
-    "fs-extra": "^8.1.0",
+    "fs-extra": "^9.0.0",
     "gensequence": "^3.1.1",
     "minimatch": "^3.0.4",
     "vscode-uri": "^2.1.1"
