--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,6 +17,7 @@ install:
   - ps: Install-Product node $env:nodejs_version
   # install modules
   - npm install
+  - npm run bootstrap-ci
 
 # Post-install test scripts.
 test_script:
