--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "clean": "lerna run clean",
     "coverage": "npm run gen-coverage",
     "gen-coverage": "lerna run coverage",
-    "install": "lerna bootstrap --ci",
+    "bootstrap": "lerna bootstrap",
+    "bootstrap-ci": "lerna bootstrap --ci",
+    "install-lerna": "npm run bootstrap",
     "lint-travis": "lerna run lint-travis",
     "prepare": "npm run clean-build",
     "pub": "npm install && npm test && lerna publish",
