--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "coverage": "npm run gen-coverage",
     "gen-coverage": "lerna run coverage",
     "bootstrap": "lerna bootstrap",
-    "bootstrap-ci": "lerna bootstrap --ci",
+    "bootstrap-ci": "lerna bootstrap --ci && npm run clean-build",
     "install-lerna": "npm run bootstrap",
     "lint-travis": "lerna run lint-travis",
-    "prepare": "npm run clean-build",
+    "prepublishOnly": "npm run clean-build",
     "pub": "npm install && npm test && lerna publish",
     "test-spec": "lerna run test-spec",
     "test-ts": "lerna run test-ts",
