Revert "Update package.json"
This reverts commit dfcdce97dd9dc5b77afa9541554aea6c0c44725f.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "coverage": "npm run gen-coverage",
     "gen-coverage": "lerna run coverage",
     "bootstrap": "lerna bootstrap",
-    "bootstrap-ci": "lerna bootstrap --ci && lerna exec 'npm i' && npm run clean-build --  --stream",
+    "bootstrap-ci": "lerna bootstrap --ci && npm run clean-build --  --stream",
     "install-lerna": "npm run bootstrap",
     "lint-travis": "lerna run lint-travis",
     "prepublishOnly": "npm run clean-build",
