--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "gen-coverage": "lerna run coverage",
     "install": "lerna bootstrap --ci",
     "lint-travis": "lerna run lint-travis",
-    "prepare": "npm run clean-build",
+    "prepare": "npm run symlink && npm run clean-build",
     "pub": "npm install && npm test && lerna publish",
+    "symlink": "node build_tools/bin/symlink.js packages",
     "test-spec": "lerna run test-spec",
     "test-ts": "lerna run test-ts",
     "test-watch": "lerna run --parallel test-watch",
@@ -47,6 +48,7 @@
     "@types/micromatch": "^3.1.1",
     "@types/minimatch": "^3.0.3",
     "@types/node": "^12.12.39",
+    "@types/shelljs": "^0.8.8",
     "@types/xregexp": "^4.3.0",
     "ajv-cli": "^3.1.0",
     "chai": "^4.2.0",
@@ -59,6 +61,7 @@
     "lerna": "^3.21.0",
     "lorem-ipsum": "^1.0.6",
     "rimraf": "^3.0.2",
+    "shelljs": "^0.8.4",
     "source-map-support": "^0.5.16",
     "ts-jest": "^25.3.1",
     "ts-json-schema-generator": "^0.65.0",
