--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,7 +7,7 @@ environment:
   matrix:
     # node.js
     # - nodejs_version: "12"
-    - nodejs_version: "Current"
+    - nodejs_version: "14"
     - nodejs_version: "10"
 
 # Install scripts. (runs after repo cloning)
