--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "gen-coverage": "lerna run coverage",
     "install": "lerna bootstrap --ci",
     "lint-travis": "lerna run lint-travis",
-    "prepare": "npm run clean-build",
+    "prepare": "npm run symlink && npm run clean-build",
     "pub": "npm install && npm test && lerna publish",
+    "symlink": "node build_tools/bin/symlink.js packages",
     "test-spec": "lerna run test-spec",
     "test-ts": "lerna run test-ts",
     "test-watch": "lerna run --parallel test-watch",
@@ -42,32 +43,33 @@
   "devDependencies": {
     "@types/comment-json": "^1.1.1",
     "@types/configstore": "^4.0.0",
-    "@types/fs-extra": "^8.1.0",
-    "@types/glob": "^7.1.1",
-    "@types/jest": "^25.2.1",
+    "@types/fs-extra": "^8.1.1",
+    "@types/glob": "^7.1.3",
+    "@types/jest": "^26.0.8",
     "@types/lorem-ipsum": "^1.0.2",
     "@types/micromatch": "^4.0.1",
     "@types/minimatch": "^3.0.3",
-    "@types/node": "^10.17.11",
+    "@types/node": "^10.17.28",
     "@types/xregexp": "^4.3.0",
-    "ajv-cli": "^3.0.0",
-    "codecov": "^3.6.5",
-    "coveralls": "^3.0.11",
-    "cspell-dict-en_us": "^1.2.24",
+    "ajv-cli": "^3.2.1",
+    "codecov": "^3.7.2",
+    "coveralls": "^3.1.0",
+    "cspell-dict-en_us": "^1.2.26",
     "cspell-dict-es-es": "^1.0.18",
     "cspell-dict-nl-nl": "^1.0.23",
-    "globcat": "^1.2.0",
-    "jest": "^25.3.0",
-    "lerna": "^3.20.2",
+    "globcat": "^1.3.3",
+    "jest": "^26.2.2",
+    "lerna": "^3.22.1",
     "lorem-ipsum": "^1.0.6",
-    "rimraf": "^3.0.0",
-    "source-map-support": "^0.5.16",
-    "ts-jest": "^25.3.1",
+    "rimraf": "^3.0.2",
+    "shelljs": "^0.8.4",
+    "source-map-support": "^0.5.19",
+    "ts-jest": "^26.1.4",
     "ts-json-schema-generator": "^0.65.0",
-    "ts-loader": "^6.2.2",
-    "tslint": "^6.1.1",
-    "typescript": "^3.8.3",
-    "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11"
+    "ts-loader": "^8.0.2",
+    "tslint": "^6.1.3",
+    "typescript": "^3.9.7",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12"
   }
 }
