chore: Only Lint on TS/MD changes

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,7 +1,13 @@
 name: lint
-on: # rebuild any PRs and main branch changes
+on:
   pull_request:
+    paths:
+      - "**/*.ts"
+      - "**/*.md"
   push:
+    paths:
+      - "**/*.ts"
+      - "**/*.md"
 
 jobs:
   cspell:
