--- a/packages/cspell-lib/package.json
+++ b/packages/cspell-lib/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "clean": "rimraf dist",
     "lint": "tslint --force --format verbose \"src/**/*.ts\"",
-    "lint-travis": "tslint \"src/**/*.ts\"",
+    "lint-ci": "tslint \"src/**/*.ts\"",
     "build": "npm run compile && npm run build-schema",
     "build-schema": "ts-json-schema-generator --no-top-ref --path src/Settings/CSpellSettingsDef.ts --type CSpellSettings --validationKeywords markdownDescription  --validationKeywords scope --validationKeywords deprecationMessage -o  ../../cspell.schema.json",
     "clean-build": "npm run clean && npm run build && npm run build-dictionaries",
