chore: Split cspell linting and TSLinting

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,23 +1,20 @@
-name: lint
+name: TSLint
 on:
   pull_request:
     paths:
       - "**/*.ts"
-      - "**/*.md"
       - "**/package*.json"
       - ".github/workflows/lint.yml"
   push:
     paths:
       - "**/*.ts"
-      - "**/*.md"
       - "**/package*.json"
       - ".github/workflows/lint.yml"
 
 jobs:
-  cspell:
+  tslint:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - run: npx cspell "**/{*.ts,*.md}"
     - run: npm ci
     - run: npm run lint-ci
