--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -34,54 +34,72 @@ jobs:
 
     - name: Coveralls
       uses: coverallsapp/github-action@v1.1.1
+      env:
+        COVERALLS_FLAG_NAME: cspell
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         path-to-lcov: ./packages/cspell/coverage/lcov.info
 
     - name: Coveralls
       uses: coverallsapp/github-action@v1.1.1
+      env:
+        COVERALLS_FLAG_NAME: cspell-glob
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         path-to-lcov: ./packages/cspell-glob/coverage/lcov.info
 
     - name: Coveralls
       uses: coverallsapp/github-action@v1.1.1
+      env:
+        COVERALLS_FLAG_NAME: cspell-io
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         path-to-lcov: ./packages/cspell-io/coverage/lcov.info
 
     - name: Coveralls
       uses: coverallsapp/github-action@v1.1.1
+      env:
+        COVERALLS_FLAG_NAME: cspell-lib
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         path-to-lcov: ./packages/cspell-lib/coverage/lcov.info
 
     - name: Coveralls
       uses: coverallsapp/github-action@v1.1.1
+      env:
+        COVERALLS_FLAG_NAME: cspell-tools
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         path-to-lcov: ./packages/cspell-tools/coverage/lcov.info
 
     - name: Coveralls
       uses: coverallsapp/github-action@v1.1.1
+      env:
+        COVERALLS_FLAG_NAME: cspell-trie
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         path-to-lcov: ./packages/cspell-trie/coverage/lcov.info
 
     - name: Coveralls
       uses: coverallsapp/github-action@v1.1.1
+      env:
+        COVERALLS_FLAG_NAME: cspell-trie-lib
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         path-to-lcov: ./packages/cspell-trie-lib/coverage/lcov.info
 
     - name: Coveralls
       uses: coverallsapp/github-action@v1.1.1
+      env:
+        COVERALLS_FLAG_NAME: cspell-trie2-lib
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         path-to-lcov: ./packages/cspell-trie2-lib/coverage/lcov.info
 
     - name: Coveralls
       uses: coverallsapp/github-action@v1.1.1
+      env:
+        COVERALLS_FLAG_NAME: cspell-util-bundle
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         path-to-lcov: ./packages/cspell-util-bundle/coverage/lcov.info
