Migrate all CI to GitHub Actions (#245)
* chore: Copy steps from other CI to GH Actions

* chore: Remove other CI providers

* chore: Remove coverage packages

* chore: Move coverage to separate file

* chore: Only Lint on TS/MD changes

* chore: Add TSLint call

* chore: Split cspell linting and TSLinting

* fix: TSLint formatting flagged errors

* try COVERALLS_FLAG_NAME for suites

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,11 +1,20 @@
-name: lint
-on: # rebuild any PRs and main branch changes
+name: TSLint
+on:
   pull_request:
+    paths:
+      - "**/*.ts"
+      - "**/package*.json"
+      - ".github/workflows/lint.yml"
   push:
+    paths:
+      - "**/*.ts"
+      - "**/package*.json"
+      - ".github/workflows/lint.yml"
 
 jobs:
-  cspell:
+  tslint:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - run: npx cspell "**/{*.ts,*.md}"
+    - run: npm ci
+    - run: npm run lint-ci
