Add test coverage for package cspell

--- a/packages/cspell/.vscode/launch.json
+++ b/packages/cspell/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "node",
             "request": "launch",
             "name": "cspell: Run",
-            "program": "${workspaceRoot}/dist/app.js",
+            "program": "${workspaceRoot}/bin.js",
 			"args": ["--root=..", "-v", "**/*.ts", "*.md" ],
             "cwd": "${workspaceRoot}",
 			"outFiles": [ "${workspaceRoot}/dist/**/*.js" ],
@@ -18,8 +18,18 @@
         {
             "type": "node",
             "request": "launch",
+            "name": "cspell: Run no args",
+            "program": "${workspaceRoot}/bin.js",
+			"args": [],
+            "cwd": "${workspaceRoot}",
+			"outFiles": [ "${workspaceRoot}/dist/**/*.js" ],
+            "sourceMaps": true
+        },
+        {
+            "type": "node",
+            "request": "launch",
             "name": "cspell: Run CSpell against current file",
-            "program": "${workspaceRoot}/dist/app.js",
+            "program": "${workspaceRoot}/bin.js",
 			"args": ["-v", "${file}"],
             "cwd": "${workspaceRoot}",
 			"outFiles": [ "${workspaceRoot}/dist/**/*.js" ],
@@ -30,7 +40,7 @@
             "type": "node",
             "request": "launch",
             "name": "cspell: Run CSpell against stdin",
-            "program": "${workspaceRoot}/dist/app.js",
+            "program": "${workspaceRoot}/bin.js",
 			"args": ["-v", "stdin"],
             "cwd": "${workspaceRoot}",
 			"outFiles": [ "${workspaceRoot}/dist/**/*.js" ],
@@ -42,7 +52,7 @@
             "type": "node",
             "request": "launch",
             "name": "cspell: Run Trace",
-            "program": "${workspaceRoot}/dist/app.js",
+            "program": "${workspaceRoot}/bin.js",
 			"args": ["trace", "about"],
             "cwd": "${workspaceRoot}",
 			"outFiles": [ "${workspaceRoot}/dist/**/*.js" ],
@@ -52,7 +62,7 @@
             "type": "node",
             "request": "launch",
             "name": "cspell: Run Check",
-            "program": "${workspaceRoot}/dist/app.js",
+            "program": "${workspaceRoot}/bin.js",
 			"args": ["check", "--config", "${workspaceRoot}/samples/.cspell.json", "${workspaceRoot}/samples/src/sample.c"],
             "cwd": "${workspaceRoot}",
 			"outFiles": [ "${workspaceRoot}/dist/**/*.js" ],
