--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -1,13 +1,9 @@
 name: Coverage
 on:
   pull_request:
-    paths:
-      - "src/**/*.ts"
-      - "!**/*.test.helper.ts"
-      - "!**/node_modules/**"
-      - "!**/vendor/**"
-      - "**/package*.json"
-      - ".github/workflows/coverage.yml"
+  push:
+    branches:
+      - master
 
 jobs:
   coverage:
