ci: update all packages (#246)
* ci: update all packages
* Create codecov.yaml
* Add test coverage for package cspell
* Add coverage for cspell-trie app
* Update package-lock.json
* ci: only run code coverage on pull-request
* ci: only build pushes if it is on master

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -1,21 +1,9 @@
 name: Coverage
-on: 
+on:
   pull_request:
-    paths:
-      - "src/**/*.ts"
-      - "!**/*.test.helper.ts"
-      - "!**/node_modules/**"
-      - "!**/vendor/**"
-      - "**/package*.json"
-      - ".github/workflows/coverage.yml"
   push:
-    paths:
-      - "src/**/*.ts"
-      - "!**/*.test.helper.ts"
-      - "!**/node_modules/**"
-      - "!**/vendor/**"
-      - "**/package*.json"
-      - ".github/workflows/coverage.yml"
+    branches:
+      - master
 
 jobs:
   coverage:
