--- a/packages/cspell-lib/package.json
+++ b/packages/cspell-lib/package.json
@@ -87,6 +87,7 @@
     "fs-extra": "^9.0.1",
     "gensequence": "^3.1.1",
     "minimatch": "^3.0.4",
+    "resolve-from": "^5.0.0",
     "vscode-uri": "^2.1.2"
   },
   "engines": {
