Add VSCode launch config.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,8 @@
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${file}"
+            "program": "${workspaceFolder}/bin.js",
+            "args": ["trace", "hello"]
         }
     ]
 }
