--- a/packages/cspell-io/tsconfig.json
+++ b/packages/cspell-io/tsconfig.json
@@ -1,6 +1,7 @@
 {
 	"compilerOptions": {
-		"target": "ES2017",
+		"target": "es2018",
+		"lib": ["es2018"],
 		"module": "commonjs",
 		"moduleResolution": "node",
 		"sourceMap": true,
