--- a/packages/cspell-trie-lib/tsconfig.json
+++ b/packages/cspell-trie-lib/tsconfig.json
@@ -1,7 +1,7 @@
 {
 	"compilerOptions": {
-		"target": "es2018",
-		"lib": ["es2018"],
+		"target": "es2019",
+		"lib": ["es2019", "es2020.promise", "es2020.bigint", "es2020.string"],
 		"module": "commonjs",
 		"moduleResolution": "node",
 		"sourceMap": true,
