--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "test-ts": "lerna run test-ts",
     "test-watch": "lerna run --parallel test-watch",
     "travis-coverage": "npm run gen-coverage && globcat packages/*/coverage/lcov.info | coveralls",
-    "test": "lerna run test && ajv -s ./cspell.schema.json -d cspell.json"
+    "test": "lerna run test && ajv -s ./cspell.schema.json -d cspell.json",
+    "update-packages": "lerna exec \"npm update -S && rm -rf node_modules package-lock.json && npm i\" && lerna bootstrap"
   },
   "repository": {
     "type": "git",
@@ -39,24 +40,24 @@
   },
   "homepage": "https://github.com/streetsidesoftware/cspell#readme",
   "devDependencies": {
-    "@types/chai": "^4.2.13",
+    "@types/chai": "^4.2.14",
     "@types/configstore": "^4.0.0",
-    "@types/fs-extra": "^9.0.1",
+    "@types/fs-extra": "^9.0.2",
     "@types/glob": "^7.1.3",
     "@types/jest": "^26.0.14",
     "@types/micromatch": "^4.0.1",
     "@types/minimatch": "^3.0.3",
-    "@types/node": "^14.11.8",
+    "@types/node": "^14.11.10",
     "@types/shelljs": "^0.8.8",
     "@types/xregexp": "^4.3.0",
     "ajv-cli": "^3.3.0",
     "chai": "^4.2.0",
     "coveralls": "^3.1.0",
-    "cspell-dict-en_us": "^1.2.26",
+    "cspell-dict-en_us": "^1.2.29",
     "cspell-dict-es-es": "^1.0.18",
     "cspell-dict-nl-nl": "^1.0.24",
     "globcat": "^1.3.3",
-    "jest": "^26.5.2",
+    "jest": "^26.5.3",
     "lerna": "^3.22.1",
     "lorem-ipsum": "^2.0.3",
     "rimraf": "^3.0.2",
@@ -64,10 +65,10 @@
     "source-map-support": "^0.5.19",
     "ts-jest": "^26.4.1",
     "ts-json-schema-generator": "^0.76.1",
-    "ts-loader": "^8.0.4",
+    "ts-loader": "^8.0.5",
     "tslint": "^6.1.2",
     "typescript": "^4.0.3",
-    "webpack": "^4.44.2",
+    "webpack": "^5.1.3",
     "webpack-cli": "^4.0.0"
   },
   "dependencies": {}
