--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,3 +35,6 @@ jobs:
     - run: npm test
     - run: node ./bin.js trace test
     - run: node ./bin.js "**/{*.ts,*.md}"
+
+    # Ensure the repository is clean after build & test
+    - run: git --no-pager diff --compact-summary --exit-code
