--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,4 +41,5 @@ jobs:
     - run: node ./bin.js "**/{*.ts,*.md}"
 
     # Ensure the repository is clean after build & test
-    - run: git --no-pager diff --compact-summary --exit-code
+    # - run: git --no-pager diff --compact-summary --exit-code
+    - run: git --no-pager diff --compact-summary
