--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,3 +39,7 @@ jobs:
     - run: node ./bin.js trace test
 
     - run: node ./bin.js "**/{*.ts,*.md}"
+
+    # Ensure the repository is clean after build & test
+    # - run: git --no-pager diff --compact-summary --exit-code
+    - run: git --no-pager diff --compact-summary
