ci: check dirty (#409)
* Revert "Revert "Add test to make sure the repository is clean after building.""
This reverts commit 58dc42b12b43a5fbb9e3e96a27b706bbf9daf31c.
* Reporting Only.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,3 +35,7 @@ jobs:
     - run: npm test
     - run: node ./bin.js trace test
     - run: node ./bin.js "**/{*.ts,*.md}"
+
+    # Ensure the repository is clean after build & test
+    # - run: git --no-pager diff --compact-summary --exit-code
+    - run: git --no-pager diff --compact-summary
