ci: update packages (#19)
* ci: update packages

* Update azure-pipelines.yml

--- a/packages/hunspell-reader/azure-pipelines.yml
+++ b/packages/hunspell-reader/azure-pipelines.yml
@@ -12,10 +12,10 @@ strategy:
       imageName: 'ubuntu-latest'
       node_version: 12.x
     mac:
-      imageName: 'macos-10.13'
+      imageName: 'macos-latest'
       node_version: 12.x
     windows:
-      imageName: 'vs2017-win2016'
+      imageName: 'windows-latest'
       node_version: 12.x
     node_10_x:
       imageName: 'ubuntu-latest'
