--- a/packages/cspell-lib/package.json
+++ b/packages/cspell-lib/package.json
@@ -17,9 +17,7 @@
     "lint-ci": "tslint \"src/**/*.ts\"",
     "build": "npm run compile && npm run build-schema",
     "build-schema": "ts-json-schema-generator --no-top-ref --path src/Settings/CSpellSettingsDef.ts --type CSpellSettings --validationKeywords markdownDescription  --validationKeywords scope --validationKeywords deprecationMessage -o  ../../cspell.schema.json",
-    "clean-build": "npm run clean && npm run build && npm run build-dictionaries",
-    "build-dictionaries": "npm run build_dictionaries-word-lists",
-    "build_dictionaries-word-lists": "npx cspell-tools compile \"./dictionaries/!(words)*.txt\" -o ./dist/dictionaries/",
+    "clean-build": "npm run clean && npm run build",
     "compile": "tsc -p .",
     "watch": "tsc --watch -p .",
     "tsc": "tsc -p .",
@@ -59,20 +57,26 @@
     "cspell-dict-companies": "^1.0.24",
     "cspell-dict-cpp": "^1.1.29",
     "cspell-dict-cryptocurrencies": "^1.0.4",
+    "cspell-dict-csharp": "^1.0.3",
+    "cspell-dict-css": "^1.0.3",
     "cspell-dict-django": "^1.0.17",
     "cspell-dict-dotnet": "^1.0.16",
     "cspell-dict-elixir": "^1.0.15",
     "cspell-dict-en-gb": "^1.1.20",
     "cspell-dict-en_us": "^1.2.30",
+    "cspell-dict-filetypes": "^1.0.3",
     "cspell-dict-fonts": "^1.0.7",
     "cspell-dict-fullstack": "^1.0.27",
     "cspell-dict-golang": "^1.1.16",
     "cspell-dict-haskell": "^1.0.6",
+    "cspell-dict-html": "^1.0.3",
     "cspell-dict-html-symbol-entities": "^1.0.15",
     "cspell-dict-java": "^1.0.14",
     "cspell-dict-latex": "^1.0.15",
     "cspell-dict-lorem-ipsum": "^1.0.14",
     "cspell-dict-lua": "^1.0.10",
+    "cspell-dict-node": "^1.0.3",
+    "cspell-dict-npm": "^1.0.3",
     "cspell-dict-php": "^1.0.15",
     "cspell-dict-powershell": "^1.0.8",
     "cspell-dict-python": "^1.0.23",
