Add some commands

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "integration-tests/repositories/w3c/specberus"]
 	path = integration-tests/repositories/w3c/specberus
-	url = git@github.com:w3c/specberus.git
+	url = https://github.com/w3c/specberus.git
+[submodule "integration-tests/repositories/bitjson/typescript-starter"]
+	path = integration-tests/repositories/bitjson/typescript-starter
+	url = https://github.com/bitjson/typescript-starter.git
