--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "integration-tests/repositories/bitjson/typescript-starter"]
 	path = integration-tests/repositories/bitjson/typescript-starter
 	url = https://github.com/bitjson/typescript-starter.git
+[submodule "/Users/jason/projects/cspell5/integration-tests/repositories/liriliri/licia"]
+	path = /Users/jason/projects/cspell5/integration-tests/repositories/liriliri/licia
+	url = https://github.com/liriliri/licia.git
