--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,12 @@
 [submodule "integration-tests/repositories/bitjson/typescript-starter"]
 	path = integration-tests/repositories/bitjson/typescript-starter
 	url = https://github.com/bitjson/typescript-starter.git
-[submodule "/Users/jason/projects/cspell5/integration-tests/repositories/liriliri/licia"]
-	path = /Users/jason/projects/cspell5/integration-tests/repositories/liriliri/licia
+[submodule "integration-tests/repositories/liriliri/licia"]
+	path = integration-tests/repositories/liriliri/licia
 	url = https://github.com/liriliri/licia.git
+[submodule "integration-tests/repositories/wireapp/wire-webapp"]
+	path = integration-tests/repositories/wireapp/wire-webapp
+	url = https://github.com/wireapp/wire-webapp.git
+[submodule "integration-tests/repositories/typescript-cheatsheets/react"]
+	path = integration-tests/repositories/typescript-cheatsheets/react
+	url = https://github.com/typescript-cheatsheets/react.git
