--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "integration-tests/repositories/typescript-cheatsheets/react"]
 	path = integration-tests/repositories/typescript-cheatsheets/react
 	url = https://github.com/typescript-cheatsheets/react.git
+[submodule "integration-tests/repositories/liriliri/licia"]
+	path = integration-tests/repositories/liriliri/licia
+	url = https://github.com/liriliri/licia.git
