Add more integrations

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,21 @@
 [submodule "integration-tests/repositories/liriliri/licia"]
 	path = integration-tests/repositories/liriliri/licia
 	url = https://github.com/liriliri/licia.git
+[submodule "integration-tests/repositories/graphql/express-graphql"]
+	path = integration-tests/repositories/graphql/express-graphql
+	url = https://github.com/graphql/express-graphql.git
+[submodule "integration-tests/repositories/wireapp/wire-desktop"]
+	path = integration-tests/repositories/wireapp/wire-desktop
+	url = https://github.com/wireapp/wire-desktop.git
+[submodule "integration-tests/repositories/graphql/graphql-relay-js"]
+	path = integration-tests/repositories/graphql/graphql-relay-js
+	url = https://github.com/graphql/graphql-relay-js.git
+[submodule "integration-tests/repositories/aws-amplify/docs"]
+	path = integration-tests/repositories/aws-amplify/docs
+	url = https://github.com/aws-amplify/docs.git
+[submodule "integration-tests/repositories/webdeveric/webpack-assets-manifest"]
+	path = integration-tests/repositories/webdeveric/webpack-assets-manifest
+	url = https://github.com/webdeveric/webpack-assets-manifest.git
+[submodule "integration-tests/repositories/prettier/prettier"]
+	path = integration-tests/repositories/prettier/prettier
+	url = https://github.com/prettier/prettier.git
