Add more integrations

--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,21 @@
 [submodule "integration-tests/repositories/prettier/prettier"]
 	path = integration-tests/repositories/prettier/prettier
 	url = https://github.com/prettier/prettier.git
+[submodule "integration-tests/repositories/webpack/webpack"]
+	path = integration-tests/repositories/webpack/webpack
+	url = https://github.com/webpack/webpack.git
+[submodule "integration-tests/repositories/w3c/aria-practices"]
+	path = integration-tests/repositories/w3c/aria-practices
+	url = https://github.com/w3c/aria-practices.git
+[submodule "integration-tests/repositories/SoftwareBrothers/admin-bro"]
+	path = integration-tests/repositories/SoftwareBrothers/admin-bro
+	url = https://github.com/SoftwareBrothers/admin-bro.git
+[submodule "integration-tests/repositories/typescript-eslint/typescript-eslint"]
+	path = integration-tests/repositories/typescript-eslint/typescript-eslint
+	url = https://github.com/typescript-eslint/typescript-eslint.git
+[submodule "integration-tests/repositories/graphql/graphql-js"]
+	path = integration-tests/repositories/graphql/graphql-js
+	url = https://github.com/graphql/graphql-js.git
+[submodule "integration-tests/repositories/microsoft/TypeScript-Website"]
+	path = integration-tests/repositories/microsoft/TypeScript-Website
+	url = https://github.com/microsoft/TypeScript-Website.git
