--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,12 @@
 [submodule "integration-tests/repositories/microsoft/TypeScript-Website"]
 	path = integration-tests/repositories/microsoft/TypeScript-Website
 	url = https://github.com/microsoft/TypeScript-Website.git
+[submodule "integration-tests/repositories/Azure/azure-rest-api-specs"]
+	path = integration-tests/repositories/Azure/azure-rest-api-specs
+	url = https://github.com/Azure/azure-rest-api-specs.git
+[submodule "integration-tests/repositories/pycontribs/jira"]
+	path = integration-tests/repositories/pycontribs/jira
+	url = https://github.com/pycontribs/jira.git
+[submodule "integration-tests/repositories/exonum/exonum"]
+	path = integration-tests/repositories/exonum/exonum
+	url = https://github.com/exonum/exonum.git
