Fix cspell.json linter error.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
             "cspell.json", ".cspell.json", "cSpell.json"
         ],
         "url": "./cspell.schema.json"
-	}]
+    }],
+    "cSpell.customWorkspaceDictionaries": ["workspace"]
 }
