ci: Add some python integrations

--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -32,6 +32,8 @@ jobs:
           - w3c/aria-practices w3c/specberus
           - webpack/webpack
           - wireapp/wire-desktop wireapp/wire-webapp
+          - django/django
+          - TheAlgorithms/Python
 
     steps:
     - uses: actions/checkout@v2
