--- a/.gitmodules
+++ b/.gitmodules
@@ -58,3 +58,12 @@
 [submodule "integration-tests/repositories/exonum/exonum"]
 	path = integration-tests/repositories/exonum/exonum
 	url = https://github.com/exonum/exonum.git
+[submodule "integration-tests/repositories/TheAlgorithms/Python"]
+	path = integration-tests/repositories/TheAlgorithms/Python
+	url = https://github.com/TheAlgorithms/Python.git
+[submodule "integration-tests/repositories/django/django"]
+	path = integration-tests/repositories/django/django
+	url = https://github.com/django/django.git
+[submodule "integration-tests/repositories/php/php-src"]
+	path = integration-tests/repositories/php/php-src
+	url = https://github.com/php/php-src.git
