--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -34,6 +34,7 @@ jobs:
           - wireapp/wire-desktop wireapp/wire-webapp
           - django/django
           - TheAlgorithms/Python
+          - php/php-src
 
     steps:
     - uses: actions/checkout@v2
