--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/micromatch": "^4.0.1",
     "@types/minimatch": "^3.0.3",
     "@types/node": "^14.14.3",
+    "@types/shelljs": "^0.8.8",
     "@types/xregexp": "^4.3.0",
     "ajv-cli": "^3.3.0",
     "cspell-dict-en_us": "^1.2.30",
