ci: merge changes from master

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,5 +37,4 @@ jobs:
     - run: node ./bin.js "**/{*.ts,*.md}"
 
     # Ensure the repository is clean after build & test
-    # - run: git --no-pager diff --compact-summary --exit-code
-    - run: git --no-pager diff --compact-summary
+    - run: git --no-pager diff --compact-summary --exit-code
