--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "coverage": "npm run gen-coverage",
     "gen-coverage": "lerna run coverage",
     "install": "lerna bootstrap --ci",
+    "bootstrap": "lerna bootstrap",
     "lint-ci": "lerna run lint-ci",
     "prepare": "npm run symlink && npm run clean-build",
     "pub": "npm install && npm test && lerna publish",
@@ -46,7 +47,7 @@
     "@types/jest": "^26.0.15",
     "@types/micromatch": "^4.0.1",
     "@types/minimatch": "^3.0.3",
-    "@types/node": "^14.14.3",
+    "@types/node": "^14.14.5",
     "@types/shelljs": "^0.8.8",
     "@types/xregexp": "^4.3.0",
     "ajv-cli": "^3.3.0",
@@ -59,12 +60,12 @@
     "rimraf": "^3.0.2",
     "shelljs": "^0.8.4",
     "source-map-support": "^0.5.19",
-    "ts-jest": "^26.4.2",
+    "ts-jest": "^26.4.3",
     "ts-json-schema-generator": "^0.77.0",
     "ts-loader": "^8.0.7",
     "tslint": "^6.1.3",
-    "typescript": "^4.0.3",
-    "webpack": "^5.2.0",
+    "typescript": "^4.0.5",
+    "webpack": "^5.3.0",
     "webpack-cli": "^4.1.0"
   }
 }
