--- a/packages/cspell-util-bundle/.vscode/launch.json
+++ b/packages/cspell-util-bundle/.vscode/launch.json
@@ -4,30 +4,33 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+		{
+            "type": "node",
+            "request": "launch",
+            "name": "cspell-util-bundle: Jest current-file",
+            "program": "${workspaceFolder}/../../node_modules/.bin/jest",
+            "args": ["--runInBand", "${file}"],
+            "console": "integratedTerminal",
+            "internalConsoleOptions": "neverOpen",
+            "disableOptimisticBPs": true,
+            "preLaunchTask": "tsc: build - tsconfig.json",
+            "windows": {
+                "program": "${workspaceFolder}/../../node_modules/jest/bin/jest",
+            }
+        },
         {
             "type": "node",
             "request": "launch",
-            "name": "Launch Program",
-            "program": "${workspaceFolder}/dist/index.js",
+            "name": "cspell-util-bundle: Jest All",
+            "program": "${workspaceFolder}/../../node_modules/.bin/jest",
+            "args": ["--runInBand"],
+            "console": "integratedTerminal",
+            "internalConsoleOptions": "neverOpen",
+            "disableOptimisticBPs": true,
             "preLaunchTask": "tsc: build - tsconfig.json",
-            "outFiles": [
-                "${workspaceFolder}/dist/**/*.js"
-            ]
-        },
-		{
-			"type": "node",
-			"request": "launch",
-			"name": "Run Mocha Current File",
-            "program": "${workspaceRoot}/../../node_modules/mocha/bin/_mocha",
-            "runtimeArgs": [
-            ],
-			"args": [
-				"--timeout","999999",
-				"--colors",
-				"--require", "ts-node/register",
-				"${file}"
-			],
-			"internalConsoleOptions": "openOnSessionStart"
-		}
+            "windows": {
+                "program": "${workspaceFolder}/../../node_modules/jest/bin/jest",
+            }
+        }
     ]
 }
