dev: use esModuleInterop

--- a/packages/cspell-lib/tsconfig.json
+++ b/packages/cspell-lib/tsconfig.json
@@ -9,6 +9,7 @@
         "declaration": true,
 		"noImplicitAny": true,
 		"noImplicitThis": true,
+		"esModuleInterop": true,
 		"strictNullChecks": true,
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
