--- a/packages/cspell-tools/tsconfig.json
+++ b/packages/cspell-tools/tsconfig.json
@@ -6,7 +6,8 @@
 		"moduleResolution": "node",
 		"sourceMap": true,
 		"alwaysStrict": true,
-        "declaration": true,
+		"declaration": true,
+		"esModuleInterop": true,
 		"noImplicitAny": true,
 		"noImplicitThis": true,
 		"strictNullChecks": true,
