--- a/packages/cspell-util-bundle/tsconfig.json
+++ b/packages/cspell-util-bundle/tsconfig.json
@@ -10,6 +10,7 @@
 		"noImplicitAny": true,
 		"noImplicitThis": true,
 		"strictNullChecks": true,
+		"esModuleInterop": true,
 		"strict": true,
 		"strictFunctionTypes": false,
 		"forceConsistentCasingInFileNames": true,
