ci: Update XRegExp

--- a/packages/cspell-util-bundle/package.json
+++ b/packages/cspell-util-bundle/package.json
@@ -21,6 +21,7 @@
     "clean-build": "npm run clean && npm run build",
     "coverage": "jest --coverage",
     "test-watch": "jest --watch",
+    "test-pack": "npm pack",
     "test": "jest"
   },
   "repository": {
@@ -38,8 +39,7 @@
     "node": ">=10.0.0"
   },
   "devDependencies": {
-    "@types/xregexp": "^4.3.0",
     "rimraf": "^3.0.2",
-    "xregexp": "^4.3.0"
+    "xregexp": "^4.4.0"
   }
 }
