--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "clean-build": "lerna run clean-build",
     "clean": "lerna run clean",
     "coverage": "npm run gen-coverage",
-    "gen-coverage": "lerna run coverage",
+    "gen-coverage": "lerna run coverage --stream",
     "install": "lerna bootstrap --ci",
     "bootstrap": "lerna bootstrap",
     "lint-ci": "lerna run lint-ci",
