chore: Explicit rimraf devDependency
Also update the on explict older version in util-bundle

--- a/packages/cspell-io/package.json
+++ b/packages/cspell-io/package.json
@@ -57,5 +57,8 @@
   "engines": {
     "node": ">=12.0.0"
   },
-  "gitHead": "437efcc5f813402c695cfce56e8af65e16459275"
+  "gitHead": "437efcc5f813402c695cfce56e8af65e16459275",
+  "devDependencies": {
+    "rimraf": "^3.0.2"
+  }
 }
