--- a/packages/cspell-lib/package.json
+++ b/packages/cspell-lib/package.json
@@ -116,6 +116,7 @@
     ]
   },
   "devDependencies": {
-    "cspell-tools": "^5.0.1-alpha.6"
+    "cspell-tools": "^5.0.1-alpha.6",
+    "rimraf": "^3.0.2"
   }
 }
