chore: Expand out ESLint glob
- Auto-fix JS files
- Ignore the dist folder's generated JS files

--- a/packages/cspell-util-bundle/package.json
+++ b/packages/cspell-util-bundle/package.json
@@ -14,8 +14,8 @@
   "scripts": {
     "build": "tsc -p . && webpack --mode none",
     "build-production": "rimraf dist build && tsc -p . && webpack --mode production",
-    "lint": "eslint --fix \"src/**/*.ts\"",
-    "lint-ci": "eslint \"src/**/*.ts\"",
+    "lint": "eslint --fix .",
+    "lint-ci": "eslint .",
     "watch": "npm run build -- watch",
     "prepare": "npm run build-production",
     "clean": "rimraf dist",
