--- a/packages/cspell-util-bundle/package.json
+++ b/packages/cspell-util-bundle/package.json
@@ -64,6 +64,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "prettier": "^2.1.2",
     "rimraf": "^3.0.2",
+    "webpack": "^5.3.2",
     "xregexp": "^4.4.0"
   }
 }
