ci: add integration alexiosc/megistos

--- a/.gitmodules
+++ b/.gitmodules
@@ -67,3 +67,6 @@
 [submodule "integration-tests/repositories/php/php-src"]
 	path = integration-tests/repositories/php/php-src
 	url = https://github.com/php/php-src.git
+[submodule "integration-tests/repositories/alexiosc/megistos"]
+	path = integration-tests/repositories/alexiosc/megistos
+	url = https://github.com/alexiosc/megistos.git
