--- a/packages/cspell-tools/tsconfig.json
+++ b/packages/cspell-tools/tsconfig.json
@@ -8,6 +8,7 @@
 		"alwaysStrict": true,
 		"declaration": true,
 		"esModuleInterop": true,
+		"resolveJsonModule": true,
 		"noImplicitAny": true,
 		"noImplicitThis": true,
 		"strictNullChecks": true,
