--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -22,6 +22,7 @@ jobs:
           - php/php-src
           - aws-amplify/docs
           - Azure/azure-rest-api-specs
+          - alexiosc/megistos
           - exonum/exonum
           - bitjson/typescript-starter graphql/express-graphql graphql/graphql-relay-js
           - graphql/graphql-js
