--- a/packages/cspell-util-bundle/package.json
+++ b/packages/cspell-util-bundle/package.json
@@ -62,6 +62,7 @@
     "eslint": "^7.12.1",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "jest": "^26.6.1",
     "prettier": "^2.1.2",
     "rimraf": "^3.0.2",
     "webpack": "^5.3.2",
