chore: hoist EditorConfig and prettier config

--- a/.editorconfig
+++ b/.editorconfig
@@ -9,3 +9,9 @@ insert_final_newline = true
 
 [*.yaml]
 indent_size = 2
+
+[{package*.json,lerna.json}]
+indent_size = 2
+
+[*.md]
+trim_trailing_whitespace = false
