--- a/.editorconfig
+++ b/.editorconfig
@@ -7,7 +7,7 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[*.yaml]
+[*.{yaml,yml}]
 indent_size = 2
 
 [{package*.json,lerna.json}]
