--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "install": "lerna bootstrap --ci",
     "lint-travis": "lerna run lint-travis",
     "prepare": "npm run symlink && npm run clean-build",
-    "pub": "npm install && npm test && lerna publish",
+    "pub-version": "lerna version --conventional-commits",
+    "pub": "npm install && npm test && npm run pub-version && lerna publish from-git",
     "symlink": "node build_tools/bin/symlink.js packages",
     "test-spec": "lerna run test-spec",
     "test-ts": "lerna run test-ts",
