--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -24,3 +24,7 @@ jobs:
     - uses: actions/checkout@v2
     - run: npm ci
     - run: npm run lint-ci
+    - run: |
+        cd integration-tests
+        npm ci
+        npm run lint-ci
