chore: Add ESLint and Prettier config for cspell-glob

--- a/packages/cspell-glob/package.json
+++ b/packages/cspell-glob/package.json
@@ -23,6 +23,8 @@
   "scripts": {
     "build": "tsc -p .",
     "watch": "tsc -p . -w",
+    "lint": "eslint --fix .",
+    "lint-ci": "eslint .",
     "clean": "rimraf lib",
     "clean-build": "npm run clean && npm run build",
     "coverage": "jest --coverage",
@@ -43,6 +45,12 @@
     "micromatch": "^4.0.2"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.6.0",
+    "@typescript-eslint/parser": "^4.6.0",
+    "eslint": "^7.12.1",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "prettier": "^2.1.2",
     "rimraf": "^3.0.2"
   }
 }
