fix: Use dist instead of lib for cpell-glob build

--- a/packages/cspell-glob/package.json
+++ b/packages/cspell-glob/package.json
@@ -9,13 +9,13 @@
   "author": "Jason Dent <jason@streetsidesoftware.nl>",
   "homepage": "https://github.com/streetsidesoftware/cspell/tree/master/packages/cspell-glob#readme",
   "license": "MIT",
-  "main": "lib/index.js",
+  "main": "dist/index.js",
   "directories": {
-    "lib": "lib"
+    "dist": "dist"
   },
-  "typings": "lib/index.d.ts",
+  "typings": "dist/index.d.ts",
   "files": [
-    "lib/**",
+    "dist/**",
     "!**/*.test.*",
     "!**/*.spec.*",
     "!**/*.map"
