--- a/packages/cspell-glob/tsconfig.json
+++ b/packages/cspell-glob/tsconfig.json
@@ -12,7 +12,7 @@
 		"strictNullChecks": true,
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
-		"outDir": "lib",
+		"outDir": "dist",
 		"forceConsistentCasingInFileNames": true
 	},
 	"include": [
