--- a/packages/cspell-glob/package.json
+++ b/packages/cspell-glob/package.json
@@ -50,6 +50,7 @@
     "eslint": "^7.12.1",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "jest": "^26.6.1",
     "prettier": "^2.1.2",
     "rimraf": "^3.0.2"
   }
