--- a/packages/cspell-util-bundle/.npmignore
+++ b/packages/cspell-util-bundle/.npmignore
@@ -19,7 +19,10 @@
 **/*.spec.*
 
 # Ignore non distribution files
+.eslint*
 tsconfig.json
+tsconfig.webpack.json
 tslint.json
 jest.config.js
+webpack.config.js
 *.log
