--- a/packages/cspell/.npmignore
+++ b/packages/cspell/.npmignore
@@ -15,17 +15,11 @@
 /coverage
 /images
 /tmp
-**/*.test.js
-**/*.test.d.ts
-**/*.test.js.map
-**/*.test.ts
-**/*.spec.js
-**/*.spec.d.ts
-**/*.spec.js.map
-**/*.spec.ts
+**/*.test.*
+**/*.spec.*
 
 # Ignore non distribution files
-.coveralls.yml
 tsconfig.json
 tslint.json
-appveyor.yml
+jest.config.js
+*.log
