--- a/packages/cspell-tools/package.json
+++ b/packages/cspell-tools/package.json
@@ -11,7 +11,8 @@
     "watch": "tsc -p . -w",
     "clean-build": "npm run clean && npm run build",
     "clean": "rimraf dist temp",
-    "lint": "tslint --project tsconfig.json",
+    "lint": "eslint --fix .",
+    "lint-ci": "eslint .",
     "coverage": "jest --coverage",
     "test-watch": "jest --watch",
     "test": "jest"
@@ -54,6 +55,13 @@
     "node": ">=12.0.0"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.6.0",
+    "@typescript-eslint/parser": "^4.6.0",
+    "eslint": "^7.12.1",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "jest": "^26.6.1",
+    "prettier": "^2.1.2",
     "rimraf": "^3.0.2"
   }
 }
